--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -61,9 +61,12 @@
     border: none;
     background: var(--cream-color);
     cursor: pointer;
-    margin-top: -2px;
-    margin-left: 40px;
-    padding-left: 0;
+    margin-top: -5px;
+    margin-left: 50px;
+    /* padding-left: 0; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 nav.dark .theme-toggle {
