--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -91,6 +91,11 @@
     width: 15rem;
 }
 
+.continue-to-article:focus-visible {
+    outline: var(--outline-thickness) solid var(--paragraph-color);
+    border-radius: 10px;
+    outline-offset: 5px;
+}
 
 .hero--text--left .continue-to-article {
     background-color: var(--hero-lightBlue-faded);
